# ParameterMap

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  cmake.yml
examples/: CMakeLists.txt  basic_usage.cpp
include/: ParameterMap.h
tst/: CMakeLists.txt  ParameterMap_gTest.cpp
